--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
     </script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pro Micro Web Writer</title>
+    <title>Pro Micro Web Updater</title>
   </head>
   <body>
     <main>
+      <h1>Pro Micro Web Updater</h1>
       <div>
         <a id="download-file" href="#" download="firm.bin"></a>
         <input type="file" id="upload-file" />
@@ -31,7 +32,10 @@
       <div>
         <textarea readonly cols="100" rows="20" id="progress"></textarea>
       </div>
-      <div id="revision"></div>
+      <a
+        id="revision"
+        href="https://github.com/sekigon-gonnoc/promicro-web-updater"
+      ></a>
       <script src="./src/index.js"></script>
     </main>
   </body>
