--- a/index.html
+++ b/index.html
@@ -32,10 +32,15 @@
       <div>
         <textarea readonly cols="100" rows="20" id="progress"></textarea>
       </div>
-      <a
-        id="revision"
-        href="https://github.com/sekigon-gonnoc/promicro-web-updater"
-      ></a>
+      <div>
+        <a
+          id="revision"
+          href="https://github.com/sekigon-gonnoc/promicro-web-updater"
+        ></a>
+      </div>
+      <div>
+        Copyright (c) 2021 <a href="https://nogikes.booth.pm/">のぎけす屋</a>
+      </div>
       <script src="./src/index.js"></script>
     </main>
   </body>
