--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
 
       gtag("config", "G-ZVXW43QJJZ");
     </script>
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:creator" content="@_gonnoc" />
+    <meta name="twitter:title" content="Pro Micro Web Updater" />
+    <meta
+      name="twitter:description"
+      content="ブラウザからProMicroにファームウェアを書き込めます"
+    />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pro Micro Web Updater</title>
