Add flashing guide

--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
       <div>
         <textarea readonly cols="100" rows="20" id="progress"></textarea>
       </div>
+      <ol>
+        <li>Open firmware hex file</li>
+        <li>Click flash button</li>
+        <li>Reset your Pro Micro to enter bootloader</li>
+        <li>Select serial port appeared</li>
+        <li>Wait flashing complete</li>
+      </ol>
       <div>
         <a
           id="revision"
